tests/nad_test_12/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: ns-udn-a
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-shared-net
spec:
  containers:
    - name: busy
      image: busybox
      command: ["sleep", "3600"]

---

apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: ns-udn-b
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-shared-net
spec:
  containers:
    - name: busy
      image: busybox
      command: ["sleep", "3600"]
