test_outputs/connlist/nad_test_12_connlist_output.txt
Permitted connectivity analyzed in Pod network:
all input workloads are configured with (C)UDN as their primary network interface

Permitted connectivity analyzed in primary UDN ns-udn-a:
0.0.0.0-255.255.255.255[External] => ns-udn-a[udn]/pod-a[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => ns-udn-a[udn]/vm-a[VirtualMachine] : All Connections
ns-udn-a[udn]/pod-a[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
ns-udn-a[udn]/pod-a[Pod] => ns-udn-a[udn]/vm-a[VirtualMachine] : All Connections
ns-udn-a[udn]/vm-a[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
ns-udn-a[udn]/vm-a[VirtualMachine] => ns-udn-a[udn]/pod-a[Pod] : All Connections

Permitted connectivity analyzed in primary UDN ns-udn-b:
0.0.0.0-255.255.255.255[External] => ns-udn-b[udn]/pod-b[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => ns-udn-b[udn]/vm-b[VirtualMachine] : All Connections
ns-udn-b[udn]/pod-b[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
ns-udn-b[udn]/pod-b[Pod] => ns-udn-b[udn]/vm-b[VirtualMachine] : All Connections
ns-udn-b[udn]/vm-b[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
ns-udn-b[udn]/vm-b[VirtualMachine] => ns-udn-b[udn]/pod-b[Pod] : All Connections

Permitted connectivity analyzed in secondary NAD macvlan-shared-net:
ns-udn-a/pod-a[Pod] => ns-udn-a/vm-a[VirtualMachine] : All Connections
ns-udn-a/pod-a[Pod] => ns-udn-b/pod-b[Pod] : All Connections
ns-udn-a/pod-a[Pod] => ns-udn-b/vm-b[VirtualMachine] : All Connections
ns-udn-a/vm-a[VirtualMachine] => ns-udn-a/pod-a[Pod] : All Connections
ns-udn-a/vm-a[VirtualMachine] => ns-udn-b/pod-b[Pod] : All Connections
ns-udn-a/vm-a[VirtualMachine] => ns-udn-b/vm-b[VirtualMachine] : All Connections
ns-udn-b/pod-b[Pod] => ns-udn-a/pod-a[Pod] : All Connections
ns-udn-b/pod-b[Pod] => ns-udn-a/vm-a[VirtualMachine] : All Connections
ns-udn-b/pod-b[Pod] => ns-udn-b/vm-b[VirtualMachine] : All Connections
ns-udn-b/vm-b[VirtualMachine] => ns-udn-a/pod-a[Pod] : All Connections
ns-udn-b/vm-b[VirtualMachine] => ns-udn-a/vm-a[VirtualMachine] : All Connections
ns-udn-b/vm-b[VirtualMachine] => ns-udn-b/pod-b[Pod] : All Connections

Workload-to-Networks Mapping:
ns-udn-a/pod-a[Pod]: 
	Primary Network: ns-udn-a[UDN]
	Secondary Networks: macvlan-shared-net[NAD]
ns-udn-a/vm-a[VirtualMachine]: 
	Primary Network: ns-udn-a[UDN]
	Secondary Networks: macvlan-shared-net[NAD]
ns-udn-b/pod-b[Pod]: 
	Primary Network: ns-udn-b[UDN]
	Secondary Networks: macvlan-shared-net[NAD]
ns-udn-b/vm-b[VirtualMachine]: 
	Primary Network: ns-udn-b[UDN]
	Secondary Networks: macvlan-shared-net[NAD]
